--- a/lib/l10n/app_gu.arb
+++ b/lib/l10n/app_gu.arb
@@ -7,6 +7,7 @@
   "home": "ઘર",
   "explore": "અન્વેષણ કરો",
   "library": "લાઇબ્રેરી",
+  "premium": "પ્રીમિયમ",
   "search": "શોધો",
   "hint_of_search": "તમે શું સાંભળવા માંગતા છો?",
   "top_genres": "તમારી ટોચની શૈલીઓ",
