--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -7,6 +7,7 @@
     "home": "Home",
     "explore": "Explore",
     "library": "Library",
+    "premium": "premium",
     "search": "Search",
     "hint_of_search": "What do you want to listen to?",
     "top_genres": "Your Top Genres",
