--- a/lib/l10n/app_hi.arb
+++ b/lib/l10n/app_hi.arb
@@ -7,6 +7,7 @@
   "home": "घर",
   "explore": "अन्वेषण करें",
   "library": "पुस्तकालय",
+  "premium": "प्रीमियम",
   "search": "खोज",
   "hint_of_search": "तुम क्या सुनना चाहते हो?",
   "top_genres": "आपके शीर्ष शैलियाँ",
